## $Id$
## process this file with automake to create Makefile.in

SUBDIRS = scwm utilities scheme sample.scwmrc app doc modules themes
EXTRA_DIST = BUGS BUG-REPORTING COPYING.FVWM COPYING.GPL include/config.h.in \
  README-constraints scwm-bug-report-information HACKING scwm.lsm stamp-h.in \
  ANNOUNCE scwm.spec
