## $Id$
## process this file with automake to create Makefile.in
## (You should run ./autogen.sh from the top level directory)

SUBDIRS = scwm pixmaps utilities scheme sample.scwmrc app doc modules themes
EXTRA_DIST = BUGS BUG-REPORTING COPYING.FVWM COPYING.GPL include/config.h.in \
  ChangeLog include/arg_unused.h \
  README-constraints scwm-bug-report-information HACKING scwm.lsm stamp-h.in \
  ANNOUNCE scwm.spec
