## $Id$
## process this file with automake to create Makefile.in
## (You should run ./autogen.sh from the top level directory)

SUBDIRS = src pixmaps utilities scheme sample.scwmrc app doc modules themes
EXTRA_DIST = \
  Makefile.common SCWM-VERSION BUGS BUG-REPORTING \
  COPYING.FVWM COPYING.GPL include/scwmconfig.h.in \
  ChangeLog RH6-notes include/arg_unused.h \
  README-constraints README-Gnome scwm-bug-report-information HACKING scwm.lsm stamp-h.in \
  ANNOUNCE scwm.spec
